--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.app {
   min-height: 100vh;
+  transition: background-color 0.3s ease;
+}
+
+.dark-theme {
+  background-color: var(--dark-bg);
+  color: var(--text-dark);
+}
+
+.light-theme {
+  background-color: var(--light-bg);
+  color: var(--text-light);
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0px 20px 20px 20px;
+}
+
+input[type="checkbox"] {
+  accent-color:  var(--checkbox);
+  appearance: none;
+  width: 18px;
+  height: 18px;
+  border: 2px solid  var(--checkbox);
+  border-radius: 4px;
+  cursor: pointer;
+  background-color:  var(--light-bg);
+}
+
+input[type="checkbox"]:checked {
+  background-color:  var(--checkbox);
+  border: 2px solid  var(--checkbox);
+}
+
+input[type="checkbox"]:checked::before {
+  content: "✔";
+  color:  var(--light-bg);
+  display: block;
+  text-align: center;
+  font-size: 16px;
+  line-height: 15px;
+}
+.btn {
+  width: 99%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 99%;
+  margin-top: 30px;
+  background-color: var(--primary);
+  color: var(--text-dark);
+  border: none;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 450;
+  font-size: 14px;
+  line-height: 100%;
+  letter-spacing: 0%;
 }
 
-.App-link {
-  color: #61dafb;
+.btn:hover {
+  opacity: 0.9;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-border {
+  width: 99%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  border: 1px solid var(--primary);
+  padding: 9px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 450;
+  transition: opacity 0.2s;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+.btn-border:hover {
+  opacity: 0.9;
+}
+
+.dark-theme .btn-border {
+  background-color: var(--dark-bg);
+  color: var(--text-dark);
+}
+
+.light-theme .btn-border {
+  background-color: var(--ligth-bg);
+  color: var(--text-light);
+}
+
+.light-theme .sun path {
+  fill: #FFD332;
+}
+
+.light-theme .moon path {
+  fill:  var(--Work);
+}
+
+.dark-theme .sun path {
+  fill: var(--Work);
+}
+
+.dark-theme .moon path {
+  fill: #FFD332;
+}
+
+.edit path,
+.del path {
+  fill: var(--primary);
+}
+
+.plus path {
+  fill: var(--light-bg)
+}
+
+.back path {
+  fill: var(--primary);
 }
